# hodle

./: Makefile  README.md  app.js  index.html  pyproject.toml  style.css
scripts/: todays_coin.py
